--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,8 @@
 {
     "name": "grainchain-challenge",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "description": "backend project",
+    "main": "src/index.js",
     "scripts": {
         "test": "jest --coverage",
         "start": "node dist/index.js",
