--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Grainchain Challenge project",
   "scripts": {
+    "postinstall": "(cd backend && npm install) & (cd frontend && npm install)",
     "build": "(cd backend && npm run postinstall) & (cd frontend && npm run build)",
     "start": "(cd backend && npm run start)"
   },
