--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "(cd backend && npm run postinstall) & (cd frontend && npm run build)",
     "start": "(cd backend && npm run start)",
-    "heroku-postbuild": "(cd backend && npm install) & (cd frontend && npm install)"
+    "heroku-prebuild": "(cd backend && npm install) & (cd frontend && npm install)"
   },
   "repository": {
     "type": "git",
