--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Grainchain Challenge project",
   "scripts": {
     "build": "(cd backend && npm run postinstall) & (cd frontend && npm run build)",
-    "start": "(cd backend && npm run start)",
+    "start": "node backend/dist/index.js",
     "heroku-prebuild": "(cd backend && npm install) & (cd frontend && npm install)"
   },
   "repository": {
