--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Grainchain Challenge project",
   "scripts": {
-    "build": "(cd backend && npm run postinstall) & (cd frontend && npm run build)",
+    "build": "(cd backend && npm run build) & (cd frontend && npm run build)",
     "start": "node backend/dist/index.js",
     "heroku-prebuild": "(cd backend && npm install) & (cd frontend && npm install)"
   },
