--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "(cd backend && npm run build) & (cd frontend && npm run build)",
     "start": "node backend/dist/index.js",
+    "test": "(cd backend && npm run test)",
     "heroku-prebuild": "(cd backend && npm install) & (cd frontend && npm install)"
   },
   "repository": {
